--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class=" h-[80vh] flex flex-col-reverse md:flex-row lg:flex-row justify-between items-center">
             <!-- data-aos="slide-up" -->
-            <div class="mt-[25px]">
+            <div class="mt-[25px]" data-aos="slide-up">
                 <h1 class="leading-10 font-medium text-3xl lg:text-5xl text-[#0b132a] mb-2 lg:mb-3">
                     Want anything to be <br> easy with <span class="font-bold text-[#0b132a]">LaslesVPN.</span>
 
@@ -107,9 +107,9 @@
                         Started</a></button>
             </div>
 
-            <!-- data-aos="fade-left" -->
+
             <div>
-                <img src="./images/asset 0.png" alt="">
+                <img src="./images/asset 0.png" alt="" data-aos="fade-left">
             </div>
         </div>
 
@@ -117,11 +117,11 @@
 
         <!-- icon section -->
 
-        <div
-            class="bg-white grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 items-center  lg:divide-x-2 mx-auto justify-between py-12 lg:py-0 lg:mt-2 ">
+        <div class="bg-white grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 items-center  lg:divide-x-2 mx-auto justify-between py-12 lg:py-0 lg:mt-2 "
+            data-aos="slide-up">
 
             <div class="flex items-center justify-start sm:justify-center py-4 sm:py-6 w-8/12 px-4 sm:w-auto mx-auto sm:mx-0 "
-                style="opacity: 1; transform: none;">
+                style="opacity: 1; transform: none;" data-aos="">
                 <div class="flex mx-auto w-40 sm:w-auto">
                     <div class="flex items-center justify-center bg-orange-100 w-12 h-12 mr-6 rounded-full"><img
                             src="./images/heroicons_sm-user.svg" class="h-6 w-6"></div>
@@ -177,10 +177,10 @@
     </main>
 
     <!-- FEATURE SECTION -->
-    <div class="bg-[#f9f9fa] container mx-auto py-24 px-6 md:py-12 lg:py-5 lg:px-32" id="feature">
+    <div class="bg-[#f9f9fa] container mx-auto py-24 px-6 md:py-12 lg:py-5 lg:px-32" id="feature" data-aos="slide-up">
         <div class=" lg:mt-16">
             <div class="flex flex-col md:flex-row lg:flex-row justify-between items-center">
-                <div class="mb-7 lg:mb-0">
+                <div class="mb-7 lg:mb-0" data-aos="fade-right">
                     <img src="./images/asset 4.png" alt="" class=" md:w-[80%] lg:w-full">
                 </div>
 
@@ -231,13 +231,13 @@
 
     <div>
         <div class="bg-[#f8f8f8] container mx-auto py-24 px-7 md:py-12 lg:py-5 lg:px-32 mt-4" id="pricing">
-            <div class="text-center py-6">
+            <div class="text-center py-6" data-aos="slide-up">
                 <h2 class="text-3xl lg:text-4xl py-2 font-medium">Choose Your Plan</h2>
                 <p class="text-[#4f5665] text-[18px]">Let's choose the package that is best for you and explore <br> it
                     happily and cheerfully.</p>
             </div>
 
-            <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4" data-aos="slide-up">
 
                 <!-- card-one -->
                 <div
@@ -476,20 +476,20 @@
             </div>
 
             <!-- global -->
-            <div class="mx-auto mt-4">
-                <div class="text-center py-12">
+            <div class="mx-auto mt-4" >
+                <div class="text-center py-12" data-aos="slide-up">
                     <h2 class="text-3xl lg:text-4xl py-2 font-medium">Huge Global Network <br> of Fast VPN</h2>
                     <p class="text-[#4f5665] text-base lg:text-[18px] px-[52px] lg:px-0">See LaslesVPN everywhere to
                         make it easier for you when you
                         move <br> locations.</p>
                 </div>
 
-                <div class="flex items-center justify-center">
+                <div class="flex items-center justify-center" data-aos="slide-up">
                     <img src="./images/HugeGlobal.svg" alt="">
                 </div>
 
                 <div class="w-full flex justify-evenly items-center mt-4 flex-wrap lg:flex-nowrap"
-                    style="opacity: 1; transform: none;">
+                    style="opacity: 1; transform: none;" data-aos="slide-up">
 
                     <img src="./images/asset 9.png" alt="" class="h-14 w-auto mt-4 lg:mt-2">
                     <img src="./images/asset 10.png" alt="" class="h-14 w-auto mt-4 lg:mt-2">
@@ -504,16 +504,16 @@
 
 
             <!-- testimonial -->
-            <div id="testimonial">
-                <div class="text-center py-6">
+            <div id="testimonial" class="mt-7">
+                <div class="text-center py-6" data-aos="slide-up">
                     <h2 class="text-3xl lg:text-4xl py-2 font-medium">Trusted by Thousands <br> of Happy Customer</h2>
                     <p class="text-[#4f5665] text-[18px]">These are the stories of our customers who have joined us with
                         great <br> pleasure when using this crazy feature.</p>
                 </div>
 
-                <div class="">
+                <div class="" data-aos="slide-up">
                     <div class="grid grid-cols-1 lg:grid-cols-3 gap-3">
-                        <div class="px-3 flex items-stretch" tabindex="-1" style="width:100%;display:inline-block">
+                        <div class="px-3 flex items-stretch" tabindex="-1" style="width:100%;display:inline-block" data-aos="fade-right">
                             <div
                                 class="border-2 border-gray-500 hover:border-orange-500 transition-all rounded-lg p-8 flex flex-col">
                                 <div class="flex flex-col xl:flex-row w-full items-stretch xl:items-center">
@@ -601,7 +601,7 @@
                         </div>
 
                         <!-- card three -->
-                        <div class="px-3 flex items-stretch" tabindex="-1" style="width:100%;display:inline-block">
+                        <div class="px-3 flex items-stretch" tabindex="-1" style="width:100%;display:inline-block" data-aos="fade-left">
                             <div
                                 class="border-2 border-gray-500 hover:border-orange-500 transition-all rounded-lg p-8 flex flex-col">
                                 <div class="flex flex-col xl:flex-row w-full items-stretch xl:items-center">
@@ -685,7 +685,8 @@
                         d="M19 10h-6a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h6a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1Zm-4.5 3.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2ZM12.62 4h2.78L12.539.41a1.086 1.086 0 1 0-1.7 1.352L12.62 4Z" />
                 </svg>
                 <span
-                    class="text-sm text-gray-500 dark:text-gray-400 group-hover:text-blue-600 dark:group-hover:text-blue-500" id="feature">Feature</span>
+                    class="text-sm text-gray-500 dark:text-gray-400 group-hover:text-blue-600 dark:group-hover:text-blue-500"
+                    id="feature">Feature</span>
             </button>
             <button type="button"
                 class="inline-flex flex-col items-center justify-center px-5 hover:bg-gray-50 dark:hover:bg-gray-800 group">
@@ -713,7 +714,7 @@
 
 
 
-    <div class="bg-[#f3f3f4] pt-44 pb-24">
+    <div class="bg-[#f3f3f4] pt-44 pb-24" data-aos="zoom-in">
         <div
             class="max-w-screen-xl w-full mx-auto px-6 sm:px-8 lg:px-16 grid grid-rows-6 sm:grid-rows-1 grid-flow-row sm:grid-flow-col grid-cols-3 sm:grid-cols-12 gap-4">
             <div class="row-span-2 sm:col-span-4 col-start-1 col-end-4 sm:col-end-5 flex flex-col items-start "><svg
@@ -834,7 +835,7 @@
     <script>
         AOS.init({
             offset: 300,
-            duration: 400,
+            duration: 700,
         });
     </script>
 
